[gd_scene load_steps=16 format=3 uid="uid://bb47hefmv61qi"]

[ext_resource type="Script" path="res://scenes/icebug.gd" id="1_28vuy"]
[ext_resource type="Texture2D" uid="uid://b08gobgkmbebu" path="res://assets/ice_bug.png" id="1_ie8y8"]
[ext_resource type="Texture2D" uid="uid://cjhau3qgw3o3a" path="res://assets/circle_05.png" id="2_430bq"]
[ext_resource type="Texture2D" uid="uid://dlhv4jwlnlyif" path="res://assets/smoke_07.png" id="4_b5o08"]
[ext_resource type="Texture2D" uid="uid://bbkcg7168ln85" path="res://assets/snow_pile.png" id="5_pokn0"]
[ext_resource type="AudioStream" uid="uid://byjh2fasbg5m8" path="res://sound/powerUp.wav" id="6_rq3ev"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e3fwv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_u15ij"]
radius = 24.0

[sub_resource type="Animation" id="Animation_0eofv"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IceBug:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [2]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IceBug:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:dash_speed")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [8000]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SnowPile:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("SnowPile:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -192)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("IceBug:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CPUParticles2D:emitting")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("PointLight2D2:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("PointLight2D:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_yj6a1"]
resource_name = "dash"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:dash_speed")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 2),
"transitions": PackedFloat32Array(1e+06, 0.999998, 1),
"update": 0,
"values": [0, 30000, 0]
}

[sub_resource type="Animation" id="Animation_uwppw"]
resource_name = "dead"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SnowPile:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SnowPile:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(3.99999, 1),
"update": 0,
"values": [Vector2(0, -192), Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IceBug:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CPUParticles2D:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("PointLight2D2:enabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("PointLight2D:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.933333),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_d6ecp"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IceBug:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IceBug:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -4), Vector2(0, 0), Vector2(0, -4), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3i2x4"]
_data = {
"RESET": SubResource("Animation_0eofv"),
"dash": SubResource("Animation_yj6a1"),
"dead": SubResource("Animation_uwppw"),
"walk": SubResource("Animation_d6ecp")
}

[sub_resource type="Gradient" id="Gradient_rk7gi"]
offsets = PackedFloat32Array(0, 0.495238, 1)
colors = PackedColorArray(1, 1, 1, 0.203922, 1, 1, 1, 0.505882, 1, 1, 1, 0)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w2r3"]
size = Vector2(16, 16)

[node name="icebug" type="CharacterBody2D" groups=["icebug"]]
collision_layer = 64
collision_mask = 2
script = ExtResource("1_28vuy")
dash_speed = 8000

[node name="IceBug" type="Sprite2D" parent="."]
texture_filter = 1
material = SubResource("ShaderMaterial_e3fwv")
position = Vector2(0, -4)
scale = Vector2(4, 4)
texture = ExtResource("1_ie8y8")
hframes = 4
vframes = 2
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_u15ij")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_3i2x4")
}

[node name="PointLight2D2" type="PointLight2D" parent="."]
color = Color(0, 0.67451, 1, 1)
energy = 0.5
texture = ExtResource("2_430bq")
texture_scale = 0.4

[node name="PointLight2D" type="PointLight2D" parent="."]
color = Color(0, 0.67451, 1, 1)
energy = 0.45
texture = ExtResource("2_430bq")
texture_scale = 1.25

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
texture_filter = 1
amount = 4
randomness = 1.0
local_coords = true
texture = ExtResource("4_b5o08")
emission_shape = 1
emission_sphere_radius = 38.05
direction = Vector2(0, 0)
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 10.0
initial_velocity_max = 20.0
scale_amount_max = 2.5
color_ramp = SubResource("Gradient_rk7gi")

[node name="dash_cooldown" type="Timer" parent="."]
wait_time = 3.0

[node name="tree_recognizer" type="Area2D" parent="."]
collision_layer = 64
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="tree_recognizer"]
shape = SubResource("RectangleShape2D_0w2r3")

[node name="SnowPile" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 1
texture_filter = 1
position = Vector2(0, -192)
scale = Vector2(4, 4)
texture = ExtResource("5_pokn0")

[node name="dashPowerup" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_rq3ev")
volume_db = -8.0
attenuation = 4.92458

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="dash_cooldown" to="." method="_on_dash_cooldown_timeout"]
[connection signal="area_entered" from="tree_recognizer" to="." method="_on_tree_recognizer_area_entered"]
